# save-canva-link-to-pdf

./: .gitignore  README.md  pyproject.toml
scripts/: capture.py  scrape.py
scripts/utils/: utils.py
